Fixed overlapping between pathfinder & contacts section

--- a/app/src/css/components.scss
+++ b/app/src/css/components.scss
@@ -185,6 +185,7 @@
         }
 
         &#works {
+            height: 140vh;
             margin-top: 5%;
             grid-template-columns: 100%;
         }
